--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,9 @@ Django==5.1.3
 django-filter==24.3
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+gunicorn==23.0.0
+packaging==24.2
+psycopg2-binary==2.9.10
 PyJWT==2.9.0
 sqlparse==0.5.1
+whitenoise==6.8.2
